--- a/.drone.yml
+++ b/.drone.yml
@@ -2,11 +2,6 @@ kind: pipeline
 name: default
 
 steps:
-  - name: build
-    image: golang:1.13
-    commands:
-      - make build_linux_amd64
-
   - name: docker
     image: plugins/docker:17.12
     settings:
@@ -15,7 +10,7 @@ steps:
       auto_tag: true
       auto_tag_suffix: linux-amd64
       username: e314520513
-      dockerfile: Dockerfile.alpine
+      dockerfile: Dockerfile
       default_suffix: alpine
       password:
         from_secret: docker_password
